--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends "darkbase.html" %}
 
-{% block title %}Sign - Confirm your account{% endblock %}
+{% block title %}Codee - Confirm your account{% endblock %}
 
 {% block content %}
 <div class="page-header">
