--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,29 +3,28 @@
 
 
 {%block content %}
-<div class="page-header">
-    <h1 style = "color: #ffffff">Login</h1>
+<div class="page-header align-center">
+    <h1 class="text-center">Login</h1>
 </div>
-<div class="align-center">
-    <form method = "post">
+<div class="center-col align-center">
+    <form method="post" class="form-width">
         {{ form.hidden_tag() }}
-        <div class = "form-group">
+        <div class="form-group">
             {{ form.username.label() }}
             {{ form.username(class = "form-control") }}
         </div>
-        <div class = "form-group">
+        <div class="form-group">
             {{ form.password.label() }}
             {{ form.password(class = "form-control") }}
         </div>
-        <div class = "form-group">
+        <div class="form-group">
             {{ form.remember_me.label() }}
             {{ form.remember_me(class = "logged_in") }}
         </div>
-        {{ form.submit(class = "btn-lg") }}
+        {{ form.submit(class = "button full") }}
     </form>
     <br>
     <p>New user? <a href="{{url_for('auth.register')}}">Click here to register</a>.</p>
-    <p>Or <a href="{{url_for('auth.google_login')}}">Click here to login with google</a>.</p>
+    <!--<p>Or <a href="{{url_for('auth.google_login')}}">Click here to login with google</a>.</p>-->
 </div>
 {% endblock %}
-
