--- a/app/templates/darkbase.html
+++ b/app/templates/darkbase.html
@@ -13,10 +13,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign</title>
+    <title>Codee</title>
 </head>
 
-<body class='dark'>
+<body class=''>
     {% block navbar %}
     {% endblock %}
     {% block pre_content %}
