--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <!--<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=deivce-width, initial-scale=1.0">
@@ -19,7 +21,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/languages/go.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
   <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
@@ -32,138 +36,171 @@
   <a href="#">Project 3</a>
   <a href="#">Project 4</a>
 </div>
+<header>
+  <div class="topbar darkbg">
+    <button class="openbtn" onclick="openNav()">☰</button>
+    <div class="logo-wrapper"><img src="{{url_for('static', filename='/logo_white.svg')}}" class="small-logo" alt=""
+        srcset=""></div>
+
+    <div class="logout2 white">
+      <span>{{current_user.username}} 님,</span>
+      <a href="{{ url_for('auth.logout') }}">logout</a>
+    </div>
+  </div>
+</header>
 
 <body>
-
-  <button class="openbtn" onclick="openNav()">☰</button>
-  <h1 id="title">Codee</h1>
-
-  <div class="buttonbar">
-    <div class="clonebar right">
-      <form method="post">
-        <input type="text" name="repository">
-        <input class="button clone-btn" type="submit" value="clone">
-      </form>
-    </div>
-    <button type="button" class="button right" onclick="copyToClip(document.getElementById('code'))">export</button>
-  </div>
-  <div class="container">
-    <div class="sidebar">
-      <div class="filelist border-box scroll">
-        <ul id="dir_tree" aria-labelledby="tree_label">
-          <li id="{{username}}" class="dir">
-          </li>
-          <script>
-            console.log("asdfsdafasdfdsa") ;
-            console.log('{{filename}}') ;
-            $(function () {
-              var dir_tree = JSON.parse('{{dir_tree | tojson}}');
-              var parent_node = document.getElementById('{{ username }}');
-              show_dir(dir_tree['{{ username }}'], '{{ username }}', parent_node);
-              var parent_node2 = document.getElementById('browse1');
-              show_dir(dir_tree['{{ username }}'], 'browse1', parent_node2, true, 'browse1_path', false);
-              var parent_node3 = document.getElementById('browse2');
-              show_dir(dir_tree['{{ username }}'], 'browse2', parent_node3, true, 'browse2_path', true);
-            });
-
-          </script>
-        </ul>
-      </div>
-      <div id="pull-push">
-        {%if username == current_user %}
-        <button class="button" type="button" onclick="pull('{{ username }}')">pull</button>
-        <button class="button" type="button" onclick="push('{{ username }}')">push</button>
-        <button class="button modalButton" data-popup="popupOne">create codee</button>
-        {% endif %}
-        <!-- <button class="button" type="button" class="modalButton" data-popup="popupOne"
-            onclick="createCodeeFile('codee','/home/codination/ver1/app/static/files/user2/OSSLab_0420_test')">
-            create codee</button> -->
-      </div>
-      <section class="modal modalWindow" id="popupOne">
-        <section class="modalWrapper">
-          <div>
-            <form action="http://siskin21.cafe24.com/codination/ver1/create_codee" method="post">
-              <div>
-                <div class="col-25">
-                  <label for="name">codee name</label>
-                </div>
-                <div class="col-60">
-                  <input id="codee_name" type="text" name="codee_name">
-                </div>
-                <div class="col-15">
-                  <span>.cd</span>
-                </div>
-              </div>
-              <div>
-                <div class="col-25"><label for="codee_path">codee path</label></div>
-                <div class="col-60">
-                  <input id='browse1_path' type="text" name='browse1_path' disabled="true">
-                  <div id="drawer1" class="browse-dir scroll">
-                    <ul id="dir_tree" aria-labelledby="tree_label">
-                      <li id="browse1" class="dir"></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-15"> <button class='browse-btn' type='button'
-                    onclick="open_dir('drawer1')">browse</button>
-                </div>
-
-              </div>
-              <div>
-                <div class="col-25"><label for="ref_filename">reference file name</label></div>
-                <div class="col-60">
-                  <input id='browse2_path' name='browse2_path' type="text" disabled="true">
-                  <div id="drawer2" class="browse-dir scroll">
-                    <ul id="dir_tree" aria-labelledby="tree_label">
-                      <li id="browse2" class="dir"></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-15"><button class='browse-btn' type='button'
-                    onclick="open_dir('drawer2')">browse</button></div>
-              </div>
-              <div class="create-btn"><button onclick="createCodee()">Create</button>
-              </div>
-            </form>
-
-          </div>
-
-
-        </section>
-        <a class="closeBtn">×</a>
-      </section>
-      <section class="modal overlay">
-      </section>
-    </div>
+  <div class="container center-col">
+    {% if filename is not none %}
     {% if data is none %}
-    <div class="box" id='export'>
-      <h3 id="cd">{{filename}}&nbsp;&nbsp;
-        {%if username == current_user %}
-        <button class="button" type="button" onclick="saveCodee('{{ username }}')">save</button>
-        {% endif %}
-      </h3>
-
-      <div class="border-box">
-        <div class="filename" id="filename">{{ref_filename}}</div>
-        <pre id="pre" class="context-menu-one">
-          <code id="code">{{ref_data}}</code>
-        </pre>
+    <div class="full">
+      <div class="topbar align-center">
+        <h2 id="cd">{{filename}}</h2>
+        <div class="buttonbar">
+          <button type="button" class="button" onclick="copyToClip(document.getElementById('code'))">export</button>
+          {%if username == current_user.username %}
+          <button class="button clone-btn" type="button" onclick="saveCodee('{{ username }}')">save</button>
+          {% endif %}
+        </div>
       </div>
     </div>
 
     {% else %}
-    <div class="box" id='export'>
-      <div class="border-box">
-        <div class="filename" id="filename">{{filename}}</div>
-        <pre id="pre">
-              <code id="code" >{{data}}</code>
-            </pre>
-      </div>
+    <div class="full margin20">
+      <button type="button" class="button right" onclick="copyToClip(document.getElementById('code'))">export</button>
     </div>
     {% endif %}
+    {% else %}
+    <br>
+    {% endif %}
+
+    </h3>
+    <div class="center-row full">
+      <div class="sidebar col">
+        <div class="filelist border-box scroll">
+          <ul id="dir_tree" aria-labelledby="tree_label">
+            <li id="{{username}}" class="dir">
+            </li>
+            <script>
+              console.log("asdfsdafasdfdsa");
+              console.log('{{filename}}');
+              $(function () {
+                var dir_tree = JSON.parse('{{dir_tree | tojson}}');
+                var parent_node = document.getElementById('{{ username }}');
+                show_dir(dir_tree['{{ username }}'], '{{ username }}', parent_node);
+                var parent_node2 = document.getElementById('browse1');
+                show_dir(dir_tree['{{ username }}'], 'browse1', parent_node2, true, 'browse1_path', false);
+                var parent_node3 = document.getElementById('browse2');
+                show_dir(dir_tree['{{ username }}'], 'browse2', parent_node3, true, 'browse2_path', true);
+              });
+
+            </script>
+          </ul>
+        </div>
+        {%if username == current_user.username %}
+        <div class="topbar margin10">
+
+          <button class="button width48" type="button" onclick="pull('{{ username }}')">pull</button>
+          <button class="button width48" type="button" onclick="push('{{ username }}')">push</button>
+
+          <!-- <button class="button" type="button" class="modalButton" data-popup="popupOne"
+                  onclick="createCodeeFile('codee','/home/codination/ver1/app/static/files/user2/OSSLab_0420_test')">
+                  create codee</button> -->
+        </div>
+
+        <div class="full">
+          <button class="button modalButton full" data-popup="popupOne">create codee</button>
+        </div>
+        {% endif %}
+        <section class="modal modalWindow" id="popupOne">
+          <section class="modalWrapper">
+            <div>
+              <form action="http://siskin21.cafe24.com/codination/ver1/create_codee" method="post">
+                <div>
+                  <div class="col-25">
+                    <label for="name">codee name</label>
+                  </div>
+                  <div class="col-60">
+                    <input id="codee_name" type="text" name="codee_name">
+                  </div>
+                  <div class="col-15">
+                    <span>.cd</span>
+                  </div>
+                </div>
+                <div>
+                  <div class="col-25"><label for="codee_path">codee path</label></div>
+                  <div class="col-60">
+                    <input id='browse1_path' type="text" name='browse1_path' disabled="true">
+                    <div id="drawer1" class="browse-dir scroll">
+                      <ul id="dir_tree" aria-labelledby="tree_label">
+                        <li id="browse1" class="dir"></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-15"> <button class='browse-btn' type='button'
+                      onclick="open_dir('drawer1')">browse</button>
+                  </div>
+
+                </div>
+                <div>
+                  <div class="col-25"><label for="ref_filename">reference file name</label></div>
+                  <div class="col-60">
+                    <input id='browse2_path' name='browse2_path' type="text" disabled="true">
+                    <div id="drawer2" class="browse-dir scroll">
+                      <ul id="dir_tree" aria-labelledby="tree_label">
+                        <li id="browse2" class="dir"></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-15"><button class='browse-btn' type='button'
+                      onclick="open_dir('drawer2')">browse</button>
+                  </div>
+                </div>
+                <div class="create-btn"><button onclick="createCodee()">Create</button>
+                </div>
+              </form>
+
+            </div>
+
+
+          </section>
+          <a class="closeBtn">×</a>
+        </section>
+        <section class="modal overlay">
+        </section>
+      </div>
+      {% if filename is none %}
+      <div class="box" id='export'>
+        <div class="center-col">
+          <img src="{{url_for('static', filename='/6579900.jpg')}}" class="image" alt="" srcset="">
+          <a class="image-src" href="http://www.freepik.com">Designed by Freepik</a>
+        </div>
+      </div>
+      {% elif data is none %}
+      <div class="box" id='export'>
+        <div class="border-box">
+          <div class="filename-bar" id="filename">{{ref_filename}}</div>
+          <pre id="pre" class="context-menu-one">
+                <code id="code">{{ref_data}}</code>
+              </pre>
+        </div>
+      </div>
+
+      {% else %}
+      <div class="box" id='export'>
+        <div class="border-box">
+          <div class="filename-bar" id="filename">{{filename}}</div>
+          <pre id="pre" class="">
+                    <code id="code" >{{data}}</code>
+                  </pre>
+        </div>
+      </div>
+      {% endif %}
+
+    </div>
+
 
   </div>
-
 
 </body>
 <script>
