--- a/app/templates/main/repos.html
+++ b/app/templates/main/repos.html
@@ -46,7 +46,7 @@
             <div class="filename-bar" id="filename">My Repositories</div>
             <ul class="repos">
                 {% for repo in repos %}
-                <li class="repo"><a class="black" href="{{ current_user.username }}/{{ repo }}">/{{ repo
+                <li class="repo"><a class="black" href="otterlee9043/{{ repo }}">/{{ repo
                         }}</a></li>
                 {% endfor %}
             </ul>
