--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,11 +18,15 @@ a:hover {
   padding: 20px 20px 0px 0px;
 }
 
+.darkbg .logout2 a{
+  color: white;
+}
+
 .logout2{
   padding: 10px;
   font-size: 12px;
   display: inline;
-  color: rgb(189, 189, 189);
+  color: rgb(110, 110, 110);
 }
 
 .logout2:hover{
@@ -376,6 +380,7 @@ code {
 .filelist li {
   font-size: 14px;
 }
+
 .filename-bar {
   display: flex;
   border-top-left-radius: 6px;
@@ -383,7 +388,7 @@ code {
   border-bottom-style: solid;
   border-width: 1px;
   border-color: rgb(225, 225, 225);
-  background-color: rgb(245, 245, 245);
+  background-color: #faf9f6;
   padding: 10px 30px 10px 30px;
   font-weight: bold;
 }
@@ -594,8 +599,21 @@ textarea {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 70%;
+  width: 88%;
   margin: auto;
+}
+
+.reponame-container{
+  padding: 20px;
+  background-color: #faf9f6;
+  border-bottom: solid 1px #ddd;
+}
+
+.reponame {
+}
+
+.filename{
+  font-weight:bold;
 }
 
 .col {
