Refactor: 링크 삽입 오류 해결 & jquery 코드 수정
링크 삽입하는 중복 함수를 하나로 통일하고 오류 해결,
jquery를 쓰다가 안 쓰다가 하는 코드를 jquery 코드로 수정

--- a/app/templates/main/repos.html
+++ b/app/templates/main/repos.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="container center-col">
-        <img src="{{url_for('static', filename='/logo.svg')}}" class="big-logo" alt="" srcset="">
+        <img src="{{url_for('static', filename='logo.svg')}}" class="big-logo" alt="" srcset="">
         <div class="border-box">
             <div class="filename-bar" id="filename">My Repositories</div>
             <ul class="repos">
